--- a/css/style.css
+++ b/css/style.css
@@ -22,48 +22,70 @@ body {
 
 #grid-element-one {
     background-color: blue;
-    /* font-family: 'Roboto', sans-serif; */
+    font-size: 50px;
     color:aliceblue;
     grid-column:1/-1;
 }
 #grid-element-two {
     background-color: blue;
-    font-family: 'Roboto', sans-serif;
     color:aliceblue;
     grid-column: 1/2;
     grid-row: 2/9;
 }
+button:hover {
+    cursor: pointer;
+    background-color: gray;
+    color: black;
+}
+  
+ul {
+    margin-bottom: 20px;
+}
+li {
+    padding: 5px;
+    background-size: 20px;
+    list-style-type: circle;
+}
+
 #grid-element-three {
     background-color: blue;
-    font-family: 'Roboto', sans-serif;
     color:aliceblue;
-    grid-column: 2/3;
+    grid-column: 2/7;
     grid-row:2/7;
 }
-#grid-element-four {
+.img-container {
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  
+  .img-container > img {
+    border: 10px solid white;
+    border-radius: 25px;
+    width: 30%;
+    height: auto;
+  }
+/* #grid-element-four {
     background-color: blue;
-    /* font-family: 'Roboto', sans-serif; */
     color:aliceblue;
     grid-column: 3/4;
     grid-row:2/7;
 }
 #grid-element-five {
     background-color: blue;
-    /* font-family: 'Roboto', sans-serif; */
     color:aliceblue;
     grid-column: 4/5;
     grid-row:2/7;
-}
+} */
 #grid-element-six {
     background-color: blue;
-    /* font-family: 'Roboto', sans-serif; */
     color:aliceblue;
     grid-column:2/-1;
     grid-row: 7/9;
 }
 #grid-element-seven {
     background-color: blue;
-    /* font-family: 'Roboto', sans-serif; */
     color:aliceblue;
     grid-column:1/-1;
 }
